# module_37

module_37_task_1/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
module_37_task_2/: CMakeLists.txt  Main.qml  main.cpp
module_37_task_3/: CMakeLists.txt  Main.qml  main.cpp
